# z5

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  README.md  appveyor.yml  check_chunk_requests.py  matthews_test.py  pyproject.toml  requirements27.yml  requirements36.yml  setup.py  vcpkg.json  z5-config.cmake
.github/: environment.yaml
.github/pdoc/: module.html.jinja2
.github/workflows/: build.yml  build_linux.sh  build_mac.sh  build_unix.sh  build_win.bat  cpp_tests.sh  docs.yaml  environment.yaml  test-conda.yaml  test-pypi.yaml  test-s3.yaml  wheels.yml
cmake/: FindBLOSC.cmake  FindNumPy.cmake  FindZSTD.cmake
conda-recipe/: bld.bat  build.sh  meta.yaml
docs/: Makefile  conf.py  cpp.md  index.rst  installation.md  make.bat  performance.md
docs/src/: modules.rst  z5py.rst
environments/: README.md
environments/unix/: 27.yml  35.yml  36.yml  37.yml  38.yml  env.sh  z5-dev.yaml
include/z5/: attributes.hxx  broadcast.hxx  common.hxx  dataset.hxx  dataset_factory.hxx  factory.hxx  file.hxx  for_each_chunk.hxx  groups.hxx  handle.hxx  metadata.hxx  z5.hxx
include/z5/compression/: blosc_compressor.hxx  bzip2_compressor.hxx  compressor_base.hxx  lz4_compressor.hxx  raw_compressor.hxx  xz_compressor.hxx  zlib_compressor.hxx  zstd_compressor.hxx
include/z5/filesystem/: attributes.hxx  dataset.hxx  factory.hxx  handle.hxx  metadata.hxx  sharded_dataset.hxx  store.hxx
include/z5/gcs/: attributes.hxx  dataset.hxx  factory.hxx  handle.hxx  metadata.hxx
include/z5/generic/: attributes.hxx  dataset.hxx  factory.hxx  metadata.hxx  sharded_dataset.hxx  store.hxx
include/z5/handle/: file_mode.hxx  handle.hxx
include/z5/io/: io_base.hxx  io_n5.hxx  io_zarr.hxx
include/z5/multiarray/: array_access.hxx  array_util.hxx  array_view.hxx  broadcast.hxx  marray_access.hxx  xtensor_access.hxx  xtensor_util.hxx
include/z5/python/: converter.hxx
include/z5/s3/: attributes.hxx  dataset.hxx  factory.hxx  handle.hxx  metadata.hxx  sharded_dataset.hxx  store.hxx
include/z5/types/: types.hxx
include/z5/util/: blocking.hxx  crc32c.hxx  for_each.hxx  format_data.hxx  functions.hxx  interpolation.hxx  sharding.hxx  threadpool.hxx  util.hxx
include/zarr++/: array.hxx  array_factory.hxx  attributes.hxx  handles.hxx  metadata.hxx  multiarray_access.hxx
include/zarr++/compression/: blosc_compressor.hxx  bzip2_compressor.hxx  bzip_compressor.hxx  compressor_base.hxx  gzip_compressor.hxx  raw_compressor.hxx  zlib_compressor.hxx
include/zarr++/handle/: handle.hxx
include/zarr++/io/: io.hxx  io_base.hxx  io_n5.hxx  io_zarr.hxx
include/zarr++/multiarray/: marray_access.hxx
include/zarr++/python/: converter.hxx
include/zarr++/types/: dataEnum.hxx  data_enum.hxx  types.hxx
include/zarr++/util/: util.hxx
src/: CMakeLists.txt
src/bench/: README.md
src/bench/bench_java/: n5_benchmark.py
src/bench/bench_python/: bench.py  bench_embl_scratch.py  bench_read_h5.py  bench_read_n5.py  bench_read_zarr.py  bench_write_h5.py  bench_write_n5.py  bench_write_zarr.py  bench_zarr_v3.py  clean_up.py  data_for_benchmarks.py  plot_benchmark.py  plot_embl_fs.py  plot_results.py
src/bench/bench_python/results/: bench_v3_results.json  cpape_local.json  embl_groupshare.json  embl_scratch.json  embl_tmp.json
src/python/: CMakeLists.txt  _version.py.in
src/python/lib/: CMakeLists.txt  attributes.cxx  dataset.cxx  factory.cxx  handles.cxx  simple.cxx  util.cxx  variant_cast.hxx  z5py.cxx  zarr_array.cxx  zarr_pp.cxx
src/python/module/z5py/: __init__.py  attribute_manager.py  base.py  converter.py  dataset.py  file.py  group.py  modes.py  shape_utils.py  util.py
src/python/test/: _s3_capability.py  _v3_capability.py  add_to_pp.sh  stress_test.py  test_asarray.py  test_attributes.py  test_compression.py  test_converter.py  test_dataset.py  test_file.py  test_group.py  test_interop.py  test_locking.py  test_non_contiguous.py  test_permissions.py  test_pickle.py  test_py_zarray.py  test_regression.py  test_s3.py  test_util.py  test_zarr.py  test_zarr_v3.py
src/python/test/deprecated/: test_regression.py
src/test/: CMakeLists.txt  run_all_tests.sh  test_attributes.cxx  test_blosc.cxx  test_dataset.cxx  test_factories.cxx  test_handle.cxx  test_io.cxx  test_metadata.cxx  test_zarray.cxx
src/test/compression/: CMakeLists.txt  test_blosc.cxx  test_bzip.cxx  test_bzip2.cxx  test_gzip.cxx  test_helper.hxx  test_lz4.cxx  test_raw.cxx  test_xz.cxx  test_zlib.cxx  test_zstd.cxx
src/test/io/: CMakeLists.txt  test_helper.hxx  test_io_n5.cxx  test_io_zarr.cxx
src/test/multiarray/: CMakeLists.txt  array_helper.hxx  test_array.cxx  test_array_nd.cxx  test_array_util.cxx  test_broadcast.cxx  test_marray.cxx  test_xtensor.cxx  test_xtnd.cxx  test_xtutil.cxx
src/test/s3/: CMakeLists.txt  test_factories_s3.cxx  test_handle_s3.cxx
src/test/test_n5/: CMakeLists.txt  MakeTestData.java  run_test.bash  test_n5.cxx
src/test/test_n5/n5_java/: pom.xml
src/test/test_n5/n5_java/src/main/java/zarr_pp/n5/: App.java  App2.java
src/test/test_n5/n5_java/src/test/java/zarr_pp/n5/: AppTest.java
src/test/test_zarr/: CMakeLists.txt  make_data.py  run_test.bash  test_python.cxx  test_read_python.py
src/test/test_zarr_python/: CMakeLists.txt  make_test_data.py  test_python.cxx
src/test/util/: CMakeLists.txt  test_util.cxx
travis/: install.sh
