[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "z5py"
dynamic = ["version"]
description = "Lightweight C++ and Python library for reading and writing zarr and n5 files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]
license = { text = "MIT" }
authors = [
    { name = "Constantin Pape", email = "constantin.pape@cs.uni-goettingen.de" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/constantinpape/z5"
Repository = "https://github.com/constantinpape/z5"
Issues = "https://github.com/constantinpape/z5/issues"

[project.optional-dependencies]
# Interop tests run against zarr-python and tensorstore. zarr-python 3 needs
# Python >= 3.11; on older interpreters we fall back to the v2 library (the v3
# interop classes skip), and tensorstore is only required where it ships wheels.
test = [
    "zarr>=3; python_version >= '3.11'",
    "zarr<3; python_version < '3.11'",
    "tensorstore; python_version >= '3.11'",
]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
wheel.packages = ["src/python/module/z5py"]
sdist.exclude = [
    "bld/",
    "build/",
    "dist/",
    "wheelhouse/",
    "_skbuild/",
    "*.egg-info/",
    ".pytest_cache/",
    "__pycache__/",
    "external/",
    ".claude/",
]

# Compile every codec into the wheel so the published package can read/write
# all chunk encodings (the external C libraries are provided by vcpkg, see
# vcpkg.json and the wheels.yml workflow).
[tool.scikit-build.cmake.define]
BUILD_Z5PY = "ON"
BUILD_TESTS = "OFF"
WITH_ZLIB = "ON"
WITH_BLOSC = "ON"
WITH_BZIP2 = "ON"
WITH_XZ = "ON"
WITH_LZ4 = "ON"
WITH_ZSTD = "ON"
WITH_S3 = "OFF"
WITH_GCS = "OFF"

# The version is single-sourced from the C++ header include/z5/z5.hxx (the same
# Z5_VERSION_* macros CMake parses), so cutting a release is a one-line bump
# there. The (?s) flag lets .* span the lines between the three macros; the
# runtime z5py.__version__ is derived from the same macros via CMake (see
# src/python/_version.py.in and src/python/CMakeLists.txt).
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "include/z5/z5.hxx"
regex = '(?s)#define\s+Z5_VERSION_MAJOR\s+(?P<major>\d+).*#define\s+Z5_VERSION_MINOR\s+(?P<minor>\d+).*#define\s+Z5_VERSION_PATCH\s+(?P<patch>\d+)'
result = "{major}.{minor}.{patch}"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
build-frontend = "build"
# tensorstore is intentionally omitted here: it lacks wheels for some wheel
# targets (and a source build needs bazel), which would hard-fail the test step.
# tensorstore interop is exercised in the conda + pypi CI jobs instead; here the
# tensorstore interop classes simply skip (gated on importability).
# zarr is required for the interop tests. zarr 3 (Python >= 3.11) is the default;
# cp39/cp310 fall back to zarr 2 via the override at the end of this file.
# NOTE: cibuildwheel splits test-requires on whitespace, so inline PEP 508
# environment markers (which contain spaces, e.g. "zarr>=3; python_version >=
# '3.11'") get shredded into invalid pip args -- use per-Python overrides instead.
test-requires = ["zarr>=3"]
# {project} is the checked-out repo, which still contains the test suite.
test-command = "python -m unittest discover -s {project}/src/python/test -v"

[tool.cibuildwheel.linux]
# manylinux_2_28 ships GCC 12+, which is required for the C++20 sources
# (manylinux2014's GCC 10 is too old).
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# vcpkg is not present inside the manylinux container, so clone + bootstrap it,
# then point CMake at its toolchain so the manifest deps are auto-installed.
# manylinux_2_28 is AlmaLinux 8 (yum, runs as root) and lacks some tools several
# vcpkg ports/asset steps need, so install them first. The clone is pinned to a
# vcpkg release tag for reproducible port versions and guarded so re-runs / any
# pre-existing checkout don't fail.
before-all = [
    "yum install -y zip unzip perl-IPC-Cmd autoconf automake libtool pkgconfig",
    "test -d /opt/vcpkg || git clone --branch 2026.06.01 --depth 1 https://github.com/microsoft/vcpkg /opt/vcpkg",
    "/opt/vcpkg/bootstrap-vcpkg.sh -disableMetrics",
]

[tool.cibuildwheel.linux.environment]
VCPKG_ROOT = "/opt/vcpkg"
CMAKE_ARGS = "-DCMAKE_TOOLCHAIN_FILE=/opt/vcpkg/scripts/buildsystems/vcpkg.cmake"

[tool.cibuildwheel.macos]
# Clone pinned to a vcpkg release tag for reproducible port versions, guarded so
# re-runs / any pre-existing checkout don't fail.
before-all = [
    "test -d $HOME/vcpkg || git clone --branch 2026.06.01 --depth 1 https://github.com/microsoft/vcpkg $HOME/vcpkg",
    "$HOME/vcpkg/bootstrap-vcpkg.sh -disableMetrics",
]

[tool.cibuildwheel.macos.environment]
VCPKG_ROOT = "$HOME/vcpkg"
CMAKE_ARGS = "-DCMAKE_TOOLCHAIN_FILE=$HOME/vcpkg/scripts/buildsystems/vcpkg.cmake"
# C++20 <filesystem> needs a recent deployment target (arm64 is 11.0 anyway).
MACOSX_DEPLOYMENT_TARGET = "10.15"

[tool.cibuildwheel.windows]
# The windows-latest runner image pre-installs vcpkg at C:/vcpkg, so an
# unconditional clone aborts with "destination path already exists". Guard the
# clone (reuse the pre-installed checkout when present, otherwise clone a pinned
# release tag) and always (re-)bootstrap.
before-all = [
    "test -d C:/vcpkg || git clone --branch 2026.06.01 --depth 1 https://github.com/microsoft/vcpkg C:/vcpkg",
    "C:/vcpkg/bootstrap-vcpkg.bat -disableMetrics",
]

[tool.cibuildwheel.windows.environment]
VCPKG_ROOT = "C:/vcpkg"
# static libs + dynamic CRT is the correct triplet for CPython extensions. The
# vcpkg toolchain only honors the triplet as a CMake cache var (it ignores the
# env var), so it must be a -D define in CMAKE_ARGS.
CMAKE_ARGS = "-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static-md"

# zarr 3 requires Python >= 3.11, so cp39/cp310 test against zarr 2 instead.
# This override replaces the global test-requires for the matching builds (no
# whitespace-sensitive PEP 508 markers needed).
[[tool.cibuildwheel.overrides]]
select = "cp39-* cp310-*"
test-requires = ["zarr<3"]
